--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "independent",
   "scripts": {
+    "start": "webpack-dev-server --open",
+    "build:webpack": "webpack --config webpack.config.js -p",
     "build": "lerna run build --stream --parallel",
     "build:ui": "yarn workspace @monorepo/uikit build",
     "build:app1": "yarn workspace @monorepo/app1 build",
+    "build:app2": "yarn workspace @monorepo/app2 build",
     "cleanup": "lerna run clean --stream --parallel",
     "lerna": "lerna-wizard",
     "lint": "eslint --ext js,ts,tsx,jsx packages",
@@ -16,12 +19,18 @@
   },
   "dependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@types/node": "^12.11.7",
+    "@types/single-spa-react": "^2.8.3",
     "@types/styled-components": "^4.1.20",
     "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -29,19 +38,27 @@
     "eslint-plugin-only-warn": "^1.0.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "html-loader": "^0.5.5",
     "lerna": "^3.16.4",
     "lerna-wizard": "^1.1.1",
     "path": "^0.12.7",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
     "shx": "^0.3.2",
-    "typescript": "^3.6.4"
+    "single-spa": "^4.4.1",
+    "single-spa-react": "^2.10.3",
+    "style-loader": "^1.0.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0"
   },
   "workspaces": [
     "packages/*"
   ],
   "license": "ISIC",
   "devDependencies": {
-    "@babel/preset-env": "^7.6.3"
+    "@babel/preset-env": "^7.6.3",
+    "ts-loader": "^6.2.1",
+    "webpack-cli": "^3.3.10"
   }
 }
